--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "sass": "^1.50.0"
+    "react-icons": "^4.3.1",
+    "sass": "^1.50.0",
+    "sharp": "^0.30.3"
   },
   "devDependencies": {
     "eslint": "8.13.0",
