--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "next": "12.1.5",
+    "querystring": "^0.2.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
     "sass": "^1.50.0",
-    "sharp": "^0.30.3"
+    "sharp": "^0.30.3",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.13.0",
