--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "motion": "^10.7.2",
     "next": "12.1.5",
     "querystring": "^0.2.1",
     "react": "18.0.0",
