--- a/package.json
+++ b/package.json
@@ -19,10 +19,20 @@
     "react-icons": "^4.3.1",
     "sass": "^1.50.0",
     "sharp": "^0.30.3",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/node": "^18.7.17",
+    "@types/react": "^18.0.19",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "autoprefixer": "^10.4.9",
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5"
+    "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.3"
   }
 }
