--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
+      "@content/*": ["src/content/*"],
       "@env/*": ["src/env/*"],
       "@lib/*": ["src/lib/*"],
       "@pages/*": ["src/pages/*"],
