--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.6.2",
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-icons": "^4.3.1",
-    "sass": "^1.50.0",
+    "@sendgrid/mail": "^7.7.0",
+    "motion": "^10.14.2",
+    "next": "12.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.54.9",
     "swr": "^1.3.0",
     "zod": "^3.19.1"
   },
@@ -24,9 +25,9 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
-    "autoprefixer": "^10.4.9",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5",
+    "autoprefixer": "^10.4.10",
+    "eslint": "8.23.1",
+    "eslint-config-next": "^12.3.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
