--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "@types/node": "^18.7.17",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
