--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "contentlayer": "^0.2.8",
     "motion": "^10.14.2",
     "next": "12.3.0",
+    "next-contentlayer": "^0.2.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -30,6 +32,7 @@
     "eslint": "8.23.1",
     "eslint-config-next": "^12.3.0",
     "postcss": "^8.4.16",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
   }
