--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "contentlayer": "^0.2.8",
+    "framer-motion": "^7.3.5",
     "motion": "^10.14.2",
     "next": "12.3.0",
     "next-contentlayer": "^0.2.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "sass": "^1.54.9",
     "swr": "^1.3.0",
@@ -26,6 +28,7 @@
     "@types/node": "^18.7.17",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
+    "@types/spotify-api": "^0.0.18",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "autoprefixer": "^10.4.10",
