--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^10.14.2",
     "next": "12.3.0",
     "next-contentlayer": "^0.2.8",
+    "next-seo": "^5.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.35.0",
