--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
@@ -16,6 +17,7 @@
     "next": "12.3.0",
     "next-contentlayer": "^0.2.8",
     "next-seo": "^5.5.0",
+    "next-sitemap": "^3.1.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.35.0",
