--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "contentlayer": "^0.2.8",
-    "framer-motion": "^7.3.5",
+    "framer-motion": "^7.3.6",
     "motion": "^10.14.2",
-    "next": "12.3.0",
+    "next": "^12.3.1",
     "next-contentlayer": "^0.2.8",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.35.0",
+    "react-hook-form": "^7.36.0",
     "react-icons": "^4.4.0",
     "sass": "^1.54.9",
     "swr": "^1.3.0",
@@ -28,15 +28,15 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
-    "@types/node": "^18.7.17",
-    "@types/react": "^18.0.19",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@types/spotify-api": "^0.0.18",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "autoprefixer": "^10.4.10",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
-    "eslint-config-next": "^12.3.0",
+    "eslint-config-next": "^12.3.1",
     "postcss": "^8.4.16",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
