--- a/package.json
+++ b/package.json
@@ -7,39 +7,42 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format:check": "prettier --check .",
+    "format": "prettier --write .",
     "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
-    "contentlayer": "^0.2.8",
-    "framer-motion": "^7.3.6",
-    "motion": "^10.14.2",
-    "next": "^12.3.1",
-    "next-contentlayer": "^0.2.8",
-    "next-seo": "^5.5.0",
-    "next-sitemap": "^3.1.22",
+    "contentlayer": "^0.2.9",
+    "framer-motion": "^7.10.2",
+    "motion": "^10.15.3",
+    "next": "^13.0.7",
+    "next-contentlayer": "^0.2.9",
+    "next-seo": "^5.15.0",
+    "next-sitemap": "^3.1.42",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.36.0",
-    "react-icons": "^4.4.0",
-    "sass": "^1.54.9",
-    "swr": "^1.3.0",
-    "zod": "^3.19.1"
+    "react-hook-form": "^7.41.0",
+    "react-icons": "^4.7.1",
+    "sass": "^1.57.0",
+    "swr": "^2.0.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.7",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
-    "@types/spotify-api": "^0.0.18",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "autoprefixer": "^10.4.11",
-    "eslint": "8.23.1",
-    "eslint-config-next": "^12.3.1",
-    "postcss": "^8.4.16",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.3"
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/spotify-api": "^0.0.19",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.30.0",
+    "eslint-config-next": "^13.0.7",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   }
 }
