--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@next/font": "^13.0.7",
     "@sendgrid/mail": "^7.7.0",
     "contentlayer": "^0.2.9",
     "framer-motion": "^7.10.2",
